--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -29,11 +29,11 @@ $lightGray: #f7f7f7 !default;
 $grayLight: #d8d8d8 !default;
 $white: white !default;
 // 主色调-蓝色
-$primary: #02b0f0 !default;
+$primary: #00a7b0 !default;
 $primaryLight: #bde6f5 !default;
 ;
-//辅色调-绿色
-$info: #7ed321 !default;
+//辅色调-棕黄色
+$info: #b38e01 !default;
 //反色调-黄色
 $warn: #ee6d52 !default;
 // link
