--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-//-----------------------------------------------------  
+//-----------------------------------------------------
 // reset scss
 // 包括normalize，清零重置
 //-----------------------------------------------------
@@ -16,11 +16,10 @@ html {
     font-family: $baseFont; // 0
     -ms-text-size-adjust: 100%; // 1
     -webkit-text-size-adjust: 100%; // 1
-
     margin: 0 auto;
     font-size: 13px;
     min-width: 280px;
-    max-width: 960px;
+    // max-width: 960px;
     min-height: 100%;
     height: 100%;
 }
@@ -461,14 +460,14 @@ h6 {
 p{
 
 }
-// icon 
+// icon
 i {
     font-style: normal;
 }
 
 // Android 下 input focus 消除高亮外框
 textarea, input {
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);    
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     -webkit-user-modify: read-write-plaintext-only;
     outline: none !important;
 }
