--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -18,7 +18,7 @@ $baseGap: 20px;
 //-----------------------------------------------------
 $phoneTop: 40px;
 $topTitleHeight: 88px;
-$topHeight: $phoneTop + $topTitleHeight;
+$topHeight: $phoneTop+$topTitleHeight;
 $bottomNavHeight: 104px;
 //----------------------color------------------------
 // 灰色调
@@ -30,7 +30,7 @@ $grayLight: #d8d8d8 !default;
 $white: white !default;
 // 主色调-蓝色
 $primary: #00a7b0 !default;
-$primaryLight: #bde6f5 !default;
+$primaryLight: #49A9EE !default;
 ;
 //辅色调-棕黄色
 $info: #b38e01 !default;
