--- a/src/assets/scss/views/news.scss
+++ b/src/assets/scss/views/news.scss
@@ -1,22 +1,25 @@
 // 新闻页
-.page-news{
-  .view-content{
+.page-news {
+  .view-content {
     padding: 0 px2rem(30px);
   }
-  .newsList{
-    &>li{
+
+  .newsList {
+    &>li {
       width: 100%;
       display: table;
       table-layout: fixed;
       line-height: px2rem(50px);
-      .title{
+
+      .title {
         display: table-cell;
         width: 75%;
         text-align: left;
         @extend %ellipsis;
         color: $info;
       }
-      .date{
+
+      .date {
         width: 25%;
         display: table-cell;
         text-align: right;
@@ -25,50 +28,58 @@
     }
   }
 }
+
 // 新闻详情页
-.page-news-view{
-  .view-content{
+.page-news-view {
+  .view-content {
     padding: px2rem(30px);
     text-align: left;
   }
-  .title{
+
+  .title {
     font-size: px2rem($fontL);
   }
-  .main{
+
+  .main {
     padding-top: px2rem(30px);
   }
 }
 
 // 关于我们页面
-.aboutview{
-  .nav{
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-      justify-content: space-around;
-      background-color: #eee;
-      height: 40px;
-      width: 100%;
+.aboutview {
+  .nav {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    background-color: #eee;
+    height: 40px;
+    width: 100%;
   }
-  .nav span{
-      font-size: 16px;
-      color: #333;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-      -ms-flex: 1;
-      flex: 1;
-      text-align: center;
-      line-height: 40px;
+
+  .nav span {
+    // font-size: 16px;
+    font-size: 16px;
+    color: #333;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    text-align: center;
+    line-height: 40px;
   }
-  .nav .active, .nav .v-link-active{
-      color: #26a2ff;
-      border-bottom: 2px solid #26a2ff;
+
+  .nav .active,
+  .nav .v-link-active {
+    color: #26a2ff;
+    border-bottom: 2px solid #26a2ff;
   }
-  .nav-content{
+
+  .nav-content {
     @extend %clearfix;
-  	padding: 10px 3%;
+    padding: 10px 3%;
   }
 }
